# 8bit-sw-emulator

./: CMakeLists.txt
chip-8/: CMakeLists.txt
chip-8/demo/: main.cpp
chip-8/include/chip-8/: chip-spec.h  chip.h
chip-8/source/: chip.cpp
platform/: CMakeLists.txt
platform/demo/: demo.cpp
platform/include/platform/: display.h  pixmap.h  window.h
platform/source/: display.cpp  pixmap.cpp  window.cpp
util/: CMakeLists.txt
util/demo/: main.cpp
util/include/util/: noncopyable.h  nonmovable.h  signal.hpp  singleton-factory.hpp  singleton.hpp  vec.hpp
